Force newly created passkeys to be discoverable
And keep track of the fact that passkeys created from now on are
discoverable and old ones are not. Also note to users that their current
passkeys can be replaced to make them discoverable

--- a/templates/passkey.templ
+++ b/templates/passkey.templ
@@ -111,6 +111,9 @@ templ ShowPasskey(passkey models.Passkey) {
 		>
 			<img class="w-3/5 h-3/5 invert" src="/public/x.svg"/>
 		</button>
+		if !passkey.Discoverable {
+			<p title="This is not a discoverable key! If you re-create this passkey, you will be able to log in without filling in the username field!">☣️</p>
+		}
 	</li>
 }
 
