--- a/templates/dev.templ
+++ b/templates/dev.templ
@@ -21,13 +21,9 @@ templ DevLoginForm() {
 					bg-[#3f4c66] shrink-0 h-8 w-8 rounded-full
 					grid place-items-center pointer
 					border border-transparent outline-none focus:border-cerisestrong hover:border-ceriselight
+					nf nf-fa-door_open
 				"
-			>
-				<img
-					src="/public/emergency-exit.svg"
-					class="w-3/5 h-3/5 invert"
-				/>
-			</button>
+			></button>
 		</div>
 	</form>
 }
