--- a/pkg/static/public/style.dist.css
+++ b/pkg/static/public/style.dist.css
@@ -353,6 +353,9 @@
   .cursor-pointer {
     cursor: pointer;
   }
+  .appearance-none {
+    appearance: none;
+  }
   .grid-cols-6 {
     grid-template-columns: repeat(6, minmax(0, 1fr));
   }
@@ -634,6 +637,41 @@
       background-color: color-mix(in srgb, #fff 5%, transparent);
       @supports (color: color-mix(in lab, red, red)) {
         background-color: color-mix(in oklab, var(--color-white) 5%, transparent);
+      }
+    }
+  }
+  .checked\:after\:text-lg {
+    &:checked {
+      &::after {
+        content: var(--tw-content);
+        font-size: var(--text-lg);
+        line-height: var(--tw-leading, var(--text-lg--line-height));
+      }
+    }
+  }
+  .checked\:after\:leading-none {
+    &:checked {
+      &::after {
+        content: var(--tw-content);
+        --tw-leading: 1;
+        line-height: 1;
+      }
+    }
+  }
+  .checked\:after\:text-white {
+    &:checked {
+      &::after {
+        content: var(--tw-content);
+        color: var(--color-white);
+      }
+    }
+  }
+  .checked\:after\:content-\[\'✓\'\] {
+    &:checked {
+      &::after {
+        content: var(--tw-content);
+        --tw-content: '✓';
+        content: var(--tw-content);
       }
     }
   }
@@ -1053,6 +1091,11 @@
   syntax: "*";
   inherits: false;
 }
+@property --tw-content {
+  syntax: "*";
+  initial-value: "";
+  inherits: false;
+}
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
@@ -1098,6 +1141,7 @@
       --tw-drop-shadow-alpha: 100%;
       --tw-drop-shadow-size: initial;
       --tw-duration: initial;
+      --tw-content: "";
     }
   }
 }
